<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="date" type="id"/>
    <item name="test_title" type="id"/>
    <item name="danger" type="id" />
    <item name="moon" type="id" />

    <item name="dealer_container" type="id" />
    <item name="dealer_map" type="id" />

    <item name="event_map" type="id" />

    <item name="home_current" type="id"/>
    <item name="home_upcoming" type="id"/>
    <item name="home_favorited" type="id"/>
    <item name="home_announcement" type="id"/>
    <item name="home_user_status" type="id"/>

    <item name="info_group_container" type="id"/>

    <item name="layout" type="id"/>
    <item name="dealerName" type="id"/>
    <item name="dealerSubText" type="id"/>
    <item name="dealerPreviewImage" type="id"/>

    <item name="announcementTitle" type="id"/>
    <item name="announcementContent" type="id"/>

    <item name="eventListPager" type="id"/>

    <item name="eventSeparator" type="id"/>
    <item name="eventStartTime" type="id"/>
    <item name="eventGlyph" type="id"/>
    <item name="eventTitle" type="id"/>
    <item name="eventEndTime" type="id"/>
    <item name="eventGlyphOverflow" type="id"/>
    <item name="eventRoom" type="id"/>
    <item name="eventImage" type="id"/>

    <item name="event_splitter" type="id"/>
    <item name="map_view_pager" type="id"/>
    <item name="toolbar" type="id" />
    <item name="eventSearch" type="id" />

    <item name="navDays" type="id" />
    <item name="navTitle" type="id" />
    <item name="navSubTitle" type="id" />
    <item name="loadingWidget" type="id" />
    <item name="appStatusWidget" type="id" />
</resources>